--- a/public/index.html
+++ b/public/index.html
@@ -9,20 +9,25 @@
   <body>
     <header>
       <div class="header-content">
-        <h1>acomagu.me</h1>
-        <p>A student at University of Aizu.</p>
+        <h1 id="acomagu.me">acomagu.me</h1>
+        <p>A student learning at University of Aizu.</p>
       </div>
     </header>
     <article>
-      <h2>Products</h2>
+      <h2 id="products">Products</h2>
       <section>
-        <h3>miq</h3></h3>
-      <p>Create API Server with RDB from few lines of YAML.</p>
-      <p><a href="https://github.com/acomagu/miq">GitHub</a></p>
+        <h3 id="miq">miq</h3>
+        <p>Create API Server with RDB from few lines of YAML.</p>
+        <p><a href="https://github.com/acomagu/miq">GitHub</a></p>
+        <iframe src="//www.slideshare.net/slideshow/embed_code/key/IBOTRr8RxaRdtK" width="595" height="485" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen>
+        </iframe>
+        <div style="margin-bottom:5px">
+          <strong><a href="//www.slideshare.net/YukiIto4/simplest-api-server-miq" title="Simplest API Server &quot;miq&quot;" target="_blank">Simplest API Server “miq”</a> </strong> from <strong><a href="https://www.slideshare.net/YukiIto4" target="_blank">Yuki Ito</a></strong>
+        </div>
       </section>
     </article>
     <article>
-      <h2>Who am I</h2>
+      <h2 id="who-am-i">Who am I</h2>
       <p><strong>Yuki Ito</strong></p>
       <p>Student at <a href="http://u-aizu.ac.jp">University of Aizu</a>.</p>
       <ul>
