--- a/public/index.html
+++ b/public/index.html
@@ -18,13 +18,17 @@
       <section>
         <h3 id="miq">miq</h3>
         <p>Create API Server with RDB from few lines of YAML.</p>
-        <p><a href="https://github.com/acomagu/miq">GitHub</a></p>
         <iframe src="//www.slideshare.net/slideshow/embed_code/key/IBOTRr8RxaRdtK" width="595" height="485" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen>
         </iframe>
         <div style="margin-bottom:5px">
-          <strong><a href="//www.slideshare.net/YukiIto4/simplest-api-server-miq" title="Simplest API Server &quot;miq&quot;" target="_blank">Simplest API Server “miq”</a> </strong> from <strong><a href="https://www.slideshare.net/YukiIto4" target="_blank">Yuki Ito</a></strong>
+          <strong> <a href="//www.slideshare.net/YukiIto4/simplest-api-server-miq" title="Simplest API Server &quot;miq&quot;" target="_blank">Simplest API Server “miq”</a> </strong> from <strong><a href="https://www.slideshare.net/YukiIto4" target="_blank">Yuki Ito</a></strong>
         </div>
+        <p><a href="https://github.com/acomagu/miq">GitHub</a></p>
       </section>
+      <section>
+        <h3 id="parsefish">parsefish</h3>
+        <p>The Fish shell script parser written in Go.</p>
+        <p><a href="https://github.com/acomagu/parsefish">GitHub</a></p>
     </article>
     <article>
       <h2 id="who-am-i">Who am I</h2>
