[Add] color switcher

--- a/public/index.html
+++ b/public/index.html
@@ -7,40 +7,48 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header>
-      <div class="header-content">
-        <h1 id="acomagu.me">acomagu.me</h1>
-        <p>A student learning at University of Aizu.</p>
+    <input type="radio" name="color-switch" class="color-switch-input color-switch-input-light" id="color-switch-input-light" checked></input>
+    <input type="radio" name="color-switch" class="color-switch-input color-switch-input-dark" id="color-switch-input-dark"></input>
+    <div class="container">
+      <div class="color-switch">
+        <label class="color-switch-light" for="color-switch-input-light"></label>
+        <label class="color-switch-dark" for="color-switch-input-dark"></label>
       </div>
-    </header>
-    <article>
-      <h2 id="products">Products</h2>
-      <section>
-        <h3 id="miq">miq</h3>
-        <p>Create API Server with RDB from few lines of YAML.</p>
-        <iframe src="//www.slideshare.net/slideshow/embed_code/key/IBOTRr8RxaRdtK" width="595" height="485" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen>
-        </iframe>
-        <div style="margin-bottom:5px">
-          <strong> <a href="//www.slideshare.net/YukiIto4/simplest-api-server-miq" title="Simplest API Server &quot;miq&quot;" target="_blank">Simplest API Server “miq”</a> </strong> from <strong><a href="https://www.slideshare.net/YukiIto4" target="_blank">Yuki Ito</a></strong>
+      <header>
+        <div class="header-content">
+          <h1 id="acomagu.me">acomagu.me</h1>
+          <p>A student learning at University of Aizu.</p>
         </div>
-        <p><a href="https://github.com/acomagu/miq">GitHub</a></p>
-      </section>
-      <section>
-        <h3 id="parsefish">parsefish</h3>
-        <p>The Fish shell script parser written in Go.</p>
-        <p><a href="https://github.com/acomagu/parsefish">GitHub</a></p>
-    </article>
-    <article>
-      <h2 id="who-am-i">Who am I</h2>
-      <p><strong>Yuki Ito</strong></p>
-      <p>Student at <a href="http://u-aizu.ac.jp">University of Aizu</a>.</p>
-      <ul>
-        <li><a href="https://twitter.com/publmag1">Twitter</a></li>
-        <li><a href="https://github.com/acomagu">GitHub</a></li>
-        <li><a href="https://facebook.com/acomagu">Facebook</a></li>
-        <li><a href="https://www.slideshare.net/YukiIto4">SlideShare</a></li>
-      </ul>
-      <p>Follow me!</p>
-    </article>
+      </header>
+      <article>
+        <h2 id="products">Products</h2>
+        <section>
+          <h3 id="miq">miq</h3>
+          <p>Create API Server with RDB from few lines of YAML.</p>
+          <iframe src="//www.slideshare.net/slideshow/embed_code/key/IBOTRr8RxaRdtK" width="595" height="485" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen>
+          </iframe>
+          <div style="margin-bottom:5px">
+            <strong> <a href="//www.slideshare.net/YukiIto4/simplest-api-server-miq" title="Simplest API Server &quot;miq&quot;" target="_blank">Simplest API Server “miq”</a> </strong> from <strong><a href="https://www.slideshare.net/YukiIto4" target="_blank">Yuki Ito</a></strong>
+          </div>
+          <p><a href="https://github.com/acomagu/miq">GitHub</a></p>
+        </section>
+        <section>
+          <h3 id="parsefish">parsefish</h3>
+          <p>The Fish shell script parser written in Go.</p>
+          <p><a href="https://github.com/acomagu/parsefish">GitHub</a></p>
+      </article>
+      <article>
+        <h2 id="who-am-i">Who am I</h2>
+        <p><strong>Yuki Ito</strong></p>
+        <p>Student at <a href="http://u-aizu.ac.jp">University of Aizu</a>.</p>
+        <ul>
+          <li><a href="https://twitter.com/publmag1">Twitter</a></li>
+          <li><a href="https://github.com/acomagu">GitHub</a></li>
+          <li><a href="https://facebook.com/acomagu">Facebook</a></li>
+          <li><a href="https://www.slideshare.net/YukiIto4">SlideShare</a></li>
+        </ul>
+        <p>Follow me!</p>
+      </article>
+    </div>
   </body>
 </html>
