[Fix] small changes on introducing setence

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
       <header>
         <div class="header-content">
           <h1 id="acomagu.me">acomagu.me</h1>
-          <p>A student learning at University of Aizu.</p>
+          <p>A student at University of Aizu.</p>
         </div>
       </header>
       <article>
