--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <title>acomagu.me</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/sanitize.css/2.0.0/sanitize.min.css" />
     <link rel="stylesheet" href="style.css" />
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   </head>
   <body>
     <input type="radio" name="color-switch" class="color-switch-input color-switch-input-light" id="color-switch-input-light" checked></input>
@@ -17,36 +18,103 @@
       </div>
       <header>
         <div class="header-content">
-          <h1 id="acomagu.me">acomagu.me</h1>
+          <h1>acomagu.me</h1>
           <p>A student at University of Aizu.</p>
         </div>
       </header>
       <article>
-        <h2 id="products">Products</h2>
+        <h2>Products</h2>
         <section>
-          <h3 id="miq">miq</h3>
+          <h3>
+            miq
+            <a href="https://github.com/acomagu/miq" target="_blank" class="github-icon-link">
+              <i class="fa fa-github" aria-hidden="true"></i>
+            </a>
+          </h3>
           <p>Create API Server with RDB from few lines of YAML.</p>
           <iframe src="//www.slideshare.net/slideshow/embed_code/key/IBOTRr8RxaRdtK" width="595" height="485" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen>
           </iframe>
           <div style="margin-bottom:5px">
             <strong> <a href="//www.slideshare.net/YukiIto4/simplest-api-server-miq" title="Simplest API Server &quot;miq&quot;" target="_blank">Simplest API Server “miq”</a> </strong> from <strong><a href="https://www.slideshare.net/YukiIto4" target="_blank">Yuki Ito</a></strong>
           </div>
-          <p><a href="https://github.com/acomagu/miq">GitHub</a></p>
+          <p><a href="https://github.com/acomagu/miq" target="_blank">GitHub</a></p>
         </section>
         <section>
-          <h3 id="parsefish">parsefish</h3>
+          <h3>
+            parsefish
+            <a href="https://github.com/acomagu/parsefish" target="_blank" class="github-icon-link">
+              <i class="fa fa-github" aria-hidden="true"></i>
+            </a>
+          </h3>
           <p>The Fish shell script parser written in Go.</p>
-          <p><a href="https://github.com/acomagu/parsefish">GitHub</a></p>
+          <p><a href="https://github.com/acomagu/parsefish" target="_blank">GitHub</a></p>
+        </section>
+        <section>
+          <h3>
+            chatroom-go
+            <a href="https://github.com/acomagu/chatroom-go-v2" target="_blank" class="github-icon-link">
+              <i class="fa fa-github" aria-hidden="true"></i>
+            </a>
+          </h3>
+          <p>Create readable chatbot quickly with Go.</p>
+          <p><a href="https://github.com/acomagu/chatroom-go-v2" target="_blank">GitHub</a></p>
+        </section>
+        <section>
+          <h3>
+            fisher-lazy
+            <a href="https://github.com/acomagu/fisher-lazy" target="_blank" class="github-icon-link">
+              <i class="fa fa-github" aria-hidden="true"></i>
+            </a>
+          </h3>
+          <p>Lazy loader for fisherman packages.</p>
+          <iframe src="//www.slideshare.net/slideshow/embed_code/key/novS566hjd7WiE" width="595" height="485" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px"> <strong> <a href="//www.slideshare.net/YukiIto4/fisherlazy" title="fisher-lazyつくったはなし" target="_blank">fisher-lazyつくったはなし</a> </strong> from <strong><a href="https://www.slideshare.net/YukiIto4" target="_blank">Yuki Ito</a></strong> </div>
+          <p><a href="https://github.com/acomagu/fisher-lazy" target="_blank">GitHub</a></p>
+        </section>
+        <section>
+          <h3>
+            gocr
+            <a href="https://github.com/acomagu/gocr" target="_blank" class="github-icon-link">
+              <i class="fa fa-github" aria-hidden="true"></i>
+            </a>
+          </h3>
+          <p>OCR from CLI</p>
+          <p><a href="https://github.com/acomagu/gocr" target="_blank">GitHub</a></p>
+        </section>
+        <section>
+          <h3>
+            dl-reversi
+            <a href="https://github.com/acomagu/dl-reversi" target="_blank" class="github-icon-link">
+              <i class="fa fa-github" aria-hidden="true"></i>
+            </a>
+          </h3>
+          <p>Play Othello against Neural Network.</p>
+          <p><a href="http://acomagu.github.io/dl-reversi" target="_blank">Demo</a></p>
+          <p><a href="https://github.com/acomagu/dl-reversi" target="_blank">GitHub</a></p>
+        </section>
+        <section>
+          <h3>
+            duoq
+            <a href="https://github.com/acomagu/duoq" target="_blank" class="github-icon-link">
+              <i class="fa fa-github" aria-hidden="true"></i>
+            </a>
+          </h3>
+          <p>English vocablary flash cards app for my study of high school entrance exam.</p>
+          <p><a href="http://acomagu.html.xdomain.jp/app/duoq/" target="_blank">Demo</a></p>
+          <p><a href="https://github.com/acomagu/douq" target="_blank">GitHub</a></p>
+        </section>
       </article>
       <article>
-        <h2 id="who-am-i">Who am I</h2>
-        <p><strong>Yuki Ito</strong></p>
-        <p>Student at <a href="http://u-aizu.ac.jp">University of Aizu</a>.</p>
+        <h2>Who am I</h2>
+        <p>
+          <img src="elmo.png" class="profile-image" />
+          <strong class="profile-name">Yuki Ito</strong>
+        </p>
+        <p>Student at <a href="http://u-aizu.ac.jp" target="_blank">University of Aizu</a>.</p>
         <ul>
-          <li><a href="https://twitter.com/publmag1">Twitter</a></li>
-          <li><a href="https://github.com/acomagu">GitHub</a></li>
-          <li><a href="https://facebook.com/acomagu">Facebook</a></li>
-          <li><a href="https://www.slideshare.net/YukiIto4">SlideShare</a></li>
+          <li><a href="https://twitter.com/publmag1" target="_blank">Twitter</a></li>
+          <li><a href="https://github.com/acomagu" target="_blank">GitHub</a></li>
+          <li><a href="https://facebook.com/acomagu" target="_blank">Facebook</a></li>
+          <li><a href="https://www.slideshare.net/YukiIto4" target="_blank">SlideShare</a></li>
         </ul>
         <p>Follow me!</p>
       </article>
