Update twitter username

--- a/public/index.html
+++ b/public/index.html
@@ -111,7 +111,7 @@
         </p>
         <p>Student at <a href="http://u-aizu.ac.jp" target="_blank">University of Aizu</a>.</p>
         <ul>
-          <li><a href="https://twitter.com/publmag1" target="_blank">Twitter</a></li>
+          <li><a href="https://twitter.com/acomagu" target="_blank">Twitter</a></li>
           <li><a href="https://github.com/acomagu" target="_blank">GitHub</a></li>
           <li><a href="https://facebook.com/acomagu" target="_blank">Facebook</a></li>
           <li><a href="https://www.slideshare.net/YukiIto4" target="_blank">SlideShare</a></li>
